--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
                 <span class="stat-label">Years of Bharatanatyam</span>
             </div>
             <div class="stat-item">
-                <span class="stat-number">🏆</span>
-                <span class="stat-label">Missouri State Winner - Patriots Pen Competition</span>
+                <span class="stat-number">Missouri State Winner🏆</span>
+                <span class="stat-label">and Top 12 Nationally in Patriots Pen Competition</span>
             </div>
         </div>
     </section>
