--- a/index.html
+++ b/index.html
@@ -555,7 +555,8 @@
 
         <div class="highlight-box">
             <h3>Recognition</h3>
-            <p>A Red Cross leader once called me "a force of nature"—not because I talk the loudest, but because I lift others as I lead.</p>
+            <p> <b>Outstanding Officer of the Year Award - Missouri & Arkansas Region </b> \n
+                Described as "a force of nature" for building the Red Cross chapter from the ground up, launching blood drives, and inspiring a movement of compassion that spread like wildfire</p>
             
             <!-- YouTube Video Embed -->
             <div style="margin: 2rem auto; max-width: 800px;">
