--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
         <div class="highlight-box">
             <h3>Recognition</h3>
-            <p> <b>Outstanding Officer of the Year Award - Missouri & Arkansas Region </b> \n
+            <p> <strong>Outstanding Officer of the Year Award - Missouri & Arkansas Region </strong><br>
                 Described as "a force of nature" for building the Red Cross chapter from the ground up, launching blood drives, and inspiring a movement of compassion that spread like wildfire</p>
             
             <!-- YouTube Video Embed -->
